--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=todo
+# Configurações do MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/todo?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.show-sql=true
+
+# Flyway
+spring.flyway.baselineOnMigrate=true
